--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <input type="number" class="form__input" placeholder="MOBILE NUMBER"  required>
             <input type="email" class="form__input" placeholder="EMAIL ADDRESS"  required>
             <input type="number" class="form__input" placeholder="NO. OF TICKETS"  required>
+            <div class="form__group">
+                <label class="form__label" for="date">Date:</label>
+                <input class="date__input" type="date" id="date" >
+            </div>
             <div class="drop_down">
                 <select>
                     <option value="MALE">MALE</option>
@@ -37,11 +41,13 @@
                     <option value="FOREIGN NATIONALS">FOREIGN NATIONALS</option>
                 </select>
             </div>
-            <div>
+            <div class="form__group">
                 <label for="fee" class="form__label">ENTRY FEE:</label>
                 <input class="form__input fee" id="fee" required>
             </div>
-            <button class="btn">PROCCED TO PAY</BUtton>
+            <div>
+            <button class="btn">PROCCED TO PAY</button>
+            </div>
         </div>
         <span>Copyright 2021, all rights reserved with National Gallery of Modern Art.</span>
     </section>
