making it responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <section class="container">
+    <div class="background__image">
         <div class="header">
             <div class="logo_main">
                 <img src="img/MOC Final LOGO (1).png" alt="Logo">
@@ -50,6 +51,7 @@
             </div>
         </div>
         <span>Copyright 2021, all rights reserved with National Gallery of Modern Art.</span>
+    </div>
     </section>
     <script src="./script.js"></script>
 </body>
